Update footer text in index.html to reflect new branding for PyWOL

--- a/static/index.html
+++ b/static/index.html
@@ -55,8 +55,7 @@
         </main>
 
         <footer>
-            <p>PyWOL - A modern Wake-on-LAN manager</p>
-            <p>Made with <i class="fas fa-heart"></i> using FastAPI</p>
+            <p>PyWOL - super simple Wake-on-LAN manager</p>
         </footer>
     </div>
     <script src="/static/script.js"></script>
