--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,10 @@
         <header>
             <h1><i class="fas fa-power-off"></i> PyWOL</h1>
             <p>Wake-on-LAN Device Manager</p>
+            <nav>
+                <a href="/" class="nav-link active">Home</a>
+                <a href="/static/api.html" class="nav-link">API Docs</a>
+            </nav>
         </header>
 
         <main>
