--- a/static/api.html
+++ b/static/api.html
@@ -74,12 +74,12 @@
                     <h3>Wake Device</h3>
                     <div class="endpoint-details">
                         <span class="method post">POST</span>
-                        <code>/api/wake/{mac_address}</code>
+                        <code>/api/wake/{device_name}</code>
                     </div>
                     <div class="parameters">
                         <h4>Parameters:</h4>
                         <ul>
-                            <li><code>mac_address</code>: The MAC address of the device to wake</li>
+                            <li><code>device_name</code>: The name of the device to wake (case-insensitive)</li>
                         </ul>
                     </div>
                     <div class="response-example">
