--- a/static/index.html
+++ b/static/index.html
@@ -3,65 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PyWOL - Wake-on-LAN Manager</title>
-    <link rel="stylesheet" href="/static/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <title>PyWOL - Wake-on-LAN</title>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1><i class="fas fa-power-off"></i> PyWOL</h1>
+            <h1>PyWOL</h1>
             <p>Wake-on-LAN Device Manager</p>
-            <nav>
-                <a href="/" class="nav-link active">Home</a>
-                <a href="/static/api.html" class="nav-link">API Docs</a>
-            </nav>
         </header>
 
-        <main>
-            <section class="add-device">
-                <h2><i class="fas fa-plus-circle"></i> Add New Device</h2>
-                <form id="deviceForm">
-                    <div class="form-group">
-                        <label for="name">Device Name</label>
-                        <input type="text" id="name" placeholder="e.g., Living Room PC" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="macAddress">MAC Address</label>
-                        <input type="text" id="macAddress" 
-                               pattern="([0-9A-Fa-f]{2}[:-]){5}([0-9A-Fa-f]{2})" 
-                               placeholder="XX:XX:XX:XX:XX:XX" required>
-                        <small>Format: XX:XX:XX:XX:XX:XX or XX-XX-XX-XX-XX-XX</small>
-                    </div>
-                    <div class="form-group">
-                        <label for="ipAddress">IP Address (Optional)</label>
-                        <input type="text" id="ipAddress" placeholder="e.g., 192.168.1.100">
-                    </div>
-                    <div class="form-group">
-                        <label for="broadcastIp">Broadcast IP (Optional)</label>
-                        <input type="text" id="broadcastIp" value="255.255.255.255">
-                    </div>
-                    <div class="form-group">
-                        <label for="port">Port (Optional)</label>
-                        <input type="number" id="port" value="9" min="1" max="65535">
-                    </div>
-                    <button type="submit"><i class="fas fa-plus"></i> Add Device</button>
-                </form>
-            </section>
-
-            <section class="devices-list">
-                <h2><i class="fas fa-desktop"></i> Saved Devices</h2>
-                <div id="devicesList">
-                    <div class="loading">Loading devices...</div>
+        <div class="add-device-form">
+            <h2>Add New Device</h2>
+            <form id="addDeviceForm">
+                <div class="form-group">
+                    <label for="name">Device Name</label>
+                    <input type="text" id="name" name="name" required>
                 </div>
-            </section>
-        </main>
+                <div class="form-group">
+                    <label for="mac">MAC Address</label>
+                    <input type="text" id="mac" name="mac" required placeholder="00:11:22:33:44:55">
+                </div>
+                <div class="form-group">
+                    <label for="ip">IP Address (Optional)</label>
+                    <input type="text" id="ip" name="ip" placeholder="192.168.1.100">
+                </div>
+                <div class="form-group">
+                    <label for="port">Port (Optional)</label>
+                    <input type="number" id="port" name="port" placeholder="9">
+                </div>
+                <button type="submit" class="submit-button">Add Device</button>
+            </form>
+        </div>
 
-        <footer>
-            <p>PyWOL - super simple Wake-on-LAN manager</p>
-        </footer>
+        <div class="device-list" id="deviceList">
+            <!-- Devices will be added here dynamically -->
+        </div>
     </div>
-    <script src="/static/script.js"></script>
+
+    <script src="/script.js"></script>
 </body>
 </html> 
