--- a/static/index.html
+++ b/static/index.html
@@ -3,44 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PyWOL - Wake-on-LAN</title>
+    <title>PyWOL - Wake-on-LAN Device Manager</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>PyWOL</h1>
-            <p>Wake-on-LAN Device Manager</p>
-        </header>
+        <h1>PyWOL</h1>
+        <h2>Wake-on-LAN Device Manager</h2>
 
-        <div class="add-device-form">
-            <h2>Add New Device</h2>
-            <form id="addDeviceForm">
-                <div class="form-group">
-                    <label for="name">Device Name</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="mac">MAC Address</label>
-                    <input type="text" id="mac" name="mac" required placeholder="00:11:22:33:44:55">
-                </div>
-                <div class="form-group">
-                    <label for="ip">IP Address (Optional)</label>
-                    <input type="text" id="ip" name="ip" placeholder="192.168.1.100">
-                </div>
-                <div class="form-group">
-                    <label for="port">Port (Optional)</label>
-                    <input type="number" id="port" name="port" placeholder="9">
-                </div>
-                <button type="submit" class="submit-button">Add Device</button>
-            </form>
-        </div>
+        <form id="addDeviceForm">
+            <div class="form-group">
+                <label for="name">Device Name</label>
+                <input type="text" id="name" required placeholder="Enter device name">
+            </div>
+            <div class="form-group">
+                <label for="mac">MAC Address</label>
+                <input type="text" id="mac" required placeholder="00:11:22:33:44:55">
+            </div>
+            <div class="form-group">
+                <label for="ip">IP Address (Optional)</label>
+                <input type="text" id="ip" placeholder="192.168.1.100">
+            </div>
+            <div class="form-group">
+                <label for="port">Port (Optional)</label>
+                <input type="text" id="port" placeholder="9">
+            </div>
+            <button type="submit">Add Device</button>
+        </form>
 
-        <div class="device-list" id="deviceList">
-            <!-- Devices will be added here dynamically -->
+        <div id="deviceList">
+            <!-- Devices will be populated here by JavaScript -->
         </div>
     </div>
-
     <script src="/script.js"></script>
 </body>
 </html> 
