--- a/static/api.html
+++ b/static/api.html
@@ -5,14 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PyWOL - API Documentation</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+    <button class="hamburger-menu" id="hamburgerMenu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+
+    <div class="sidebar" id="sidebar">
+        <nav class="sidebar-nav">
+            <a href="/"><i class="fas fa-home"></i> Home</a>
+            <a href="/static/api.html" class="active"><i class="fas fa-book"></i> API Docs</a>
+        </nav>
+    </div>
+
     <div class="container">
         <header>
             <h1>PyWOL API Documentation</h1>
-            <nav>
-                <a href="index.html" class="nav-link">Home</a>
-                <a href="api.html" class="nav-link active">API Docs</a>
+            <nav class="desktop-nav">
+                <a href="/" class="nav-link">Home</a>
+                <a href="/static/api.html" class="nav-link active">API Docs</a>
             </nav>
         </header>
 
